=== 0.5.4 / 2010-12-19

* Detect secure WebSocket requests through the HTTP_X_FORWARDED_PROTO header
* Handle socket errors when sending WebSocket messages from NodeAdapter
* Use exponential backoff to reconnect client-side WebSockets to reduce CPU load


=== 0.5.3 / 2010-10-21

* Improve detection of wss: requirement for secure WebSocket connections
* Correctly use default ports (80,443) for server-side HTTP connections
* Support legacy application/x-www-form-urlencoded POST requests
* Delete unused Channel objects that have all their subscribers removed
* Fix resend/reconnect logic in WebSocket transport
* Keep client script in memory rather than reading it from disk every time
* Prevent error-adding extensions from breaking the core protocol


=== 0.5.2 / 2010-08-12

* Support draft-76 of the WebSocket protocol (FF4, Chrome 6)
* Reduce Connection::MAX_DELAY to improve latency


=== 0.5.1 / 2010-07-21

* Fix a publishing problem in Ruby LocalTransport


=== 0.5.0 / 2010-07-17 

* Handle multiple event listeners bound to a channel
* Add extension system for adding domain-specific logic to the protocol
* Improve handling of client reconnections if the server goes down
* Change default polling interval to 0 (immediate reconnect)
* Add support for WebSockets (draft75 only) as a network transport
* Remove support for Ruby servers other than Thin
* Make client and server compatible with CometD (1.x and 2.0) components
* Improve clean-up of unused server-side connections
* Change Node API for adding Faye service to an HTTP server


=== 0.3.4 / 2010-06-20

* Stop local clients going into an infinite loop if a subscription block causes a reconnect


=== 0.3.3 / 2010-06-07

* Bring Node APIs up to date with 0.1.97
* Catch ECONNREFUSED errors in Node clients to withstand server outages
* Refactor the Server internals


=== 0.3.2 / 2010-04-04

* Fix problems with JSON serialization when Prototype, MooTools present