@@ -1,5 +1,6 @@
 === 0.5.4 / 2010-12-19
 
+* Add a #callback method to Subscriptions to detect when they become active
 * Detect secure WebSocket requests through the HTTP_X_FORWARDED_PROTO header
 * Handle socket errors when sending WebSocket messages from NodeAdapter
 * Use exponential backoff to reconnect client-side WebSockets to reduce CPU load
